@@ -63,6 +63,11 @@ X86/MacOSX 10.11/12, AMD64/MacOSX 10.11/12 and TILEGX/Linux.
   are caused by the inner guest program (such as an inner regtest).
   See README_DEVELOPERS for more info.
 
+* To allow fast detection of callgrind files in desktop environments
+  and file managers, the format was extended to have an optional
+  first line uniquely identifying the format ("# callgrind format").
+  Callgrind creates this line now (also the new xtree functionality).
+
 * ==================== FIXED BUGS ====================
 
 The following bugs have been fixed or resolved.  Note that "n-i-bz"
